Fix spacing

--- a/src/grid/grid.less
+++ b/src/grid/grid.less
@@ -1,7 +1,7 @@
-  /*****VARIABLES
+/*****VARIABLES
 Customize these as needed*****/
 
-@spacer: 1px; //Spacing between elements
+@spacer: 10px; //Spacing between elements
 @max: 1600px;
 @medium: 1000px;
 @small: 600px;
@@ -30,20 +30,18 @@ Customize these as needed*****/
   .col {
     box-sizing: border-box;
     flex: 1 1 auto;
-    margin: @spacer;
+    margin: 0px @spacer;
     min-width: 0px;
     min-height: 0px;
   }
   .generate-columns(10);
   .generate-columns(@n, @i: 1) when (@i =< @n) {
     @j: (@i*10);
-    .col-@ {
-      j
-    }
+    .col-@{j}
     {
-      width: calc((@i * 100% / @n) ~"-" @spacer);
-      max-width: calc((@i * 100% / @n) ~"-" @spacer);
-      min-width: calc((@i * 100% / @n) ~"-" @spacer);
+      width: calc((@i * 100% / @n) ~"-" (@spacer*2));
+      max-width: calc((@i * 100% / @n) ~"-" (@spacer*2));
+      min-width: calc((@i * 100% / @n) ~"-" (@spacer*2));
     }
     .generate-columns(@n, (@i + 1));
   }
@@ -62,73 +60,34 @@ Customize these as needed*****/
   .teeny-g {
     .row {
       .generate-columns-m(10);
-      .generate-columns(@n, @i: 1) when (@i =< @n) {
+      .generate-columns-m(@n, @i: 1) when (@i =< @n) {
         @j: (@i*10);
-        .col-@ {
-          j
-        }
+        .col-m-@{j}
         {
-          width: calc((@i * 100% / @n) ~"-" @spacer);
-          max-width: calc((@i * 100% / @n) ~"-" @spacer);
-          min-width: calc((@i * 100% / @n) ~"-" @spacer);
+          width: calc((@i * 100% / @n) ~"-" (@spacer*2));
+          max-width: calc((@i * 100% / @n) ~"-" (@spacer*2));
+          min-width: calc((@i * 100% / @n) ~"-" (@spacer*2));
         }
-        .generate-columns(@n, (@i + 1));
+        .generate-columns-m(@n, (@i + 1));
       }
     }
   }
-  @media all and (max-width: @small) {
-    .teeny-g {
-      .row {
-        .col-sm-10 {
-          width: 10%-@spacer;
-          max-width: 10%-@spacer;
-          min-width: 10%-@spacer;
+}
+
+@media all and (max-width: @small) {
+  .teeny-g {
+    .row {
+      .generate-columns-s(10);
+      .generate-columns-s(@n, @i: 1) when (@i =< @n) {
+        @j: (@i*10);
+        .col-sm-@{j}
+        {
+          width: calc((@i * 100% / @n) ~"-" (@spacer*2));
+          max-width: calc((@i * 100% / @n) ~"-" (@spacer*2));
+          min-width: calc((@i * 100% / @n) ~"-" (@spacer*2));
         }
-        .col-sm-20 {
-          width: 20%-@spacer;
-          max-width: 20%-@spacer;
-          min-width: 20%-@spacer;
-        }
-        .col-sm-30 {
-          width: 30%-@spacer;
-          max-width: 30%-@spacer;
-          min-width: 30%-@spacer;
-        }
-        .col-sm-40 {
-          width: 40%-@spacer;
-          max-width: 40%-@spacer;
-          min-width: 40%-@spacer;
-        }
-        .col-sm-50 {
-          width: 50%-@spacer;
-          max-width: 50%-@spacer;
-          min-width: 50%-@spacer;
-        }
-        .col-sm-60 {
-          width: 60%-@spacer;
-          max-width: 60%-@spacer;
-          min-width: 60%-@spacer;
-        }
-        .col-sm-70 {
-          width: 70%-@spacer;
-          max-width: 70%-@spacer;
-          min-width: 70%-@spacer;
-        }
-        .col-sm-80 {
-          width: 80%-@spacer;
-          max-width: 80%-@spacer;
-          min-width: 80%-@spacer;
-        }
-        .col-sm-90 {
-          width: 90%-@spacer;
-          max-width: 90%-@spacer;
-          min-width: 90%-@spacer;
-        }
-        .col-sm-100 {
-          width: 100%-@spacer;
-          max-width: 100%-@spacer;
-          min-width: 100%-@spacer;
-        }
+        .generate-columns-s(@n, (@i + 1));
       }
     }
   }
+}
